infraestructure/k8s/deployments/event-bus-depl.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
      - name: event-bus
        image: quemasandy/event-bus

---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-cluster-ip
spec:
  selector:
    app: event-bus
  type: ClusterIP
  ports:
  - name: http
    port: 4005
    targetPort: 4005
