infraestructure/k8s/deployments/query-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        image: quemasandy/query

---
apiVersion: v1
kind: Service
metadata:
  name: 
spec:
  selector:
    app: query
  type: ClusterIP
  ports:
  - name: http
    port: 4002
    targetPort: 4002
