infraestructure/k8s/deployments/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: kblog.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip
                port:
                  number: 3000

    - host: kblog.com
      http:
        paths:
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: posts-cluster-ip
                port:
                  number: 4000
    
    - host: kblog.com
      http:
        paths:
          - path: /posts/*/comments
            pathType: Prefix
            backend:
              service:
                name: comments-cluster-ip
                port:
                  number: 4001
